@@ -1,3 +1,8 @@
+2011-02-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-rfn-eshadow-setup-minibuffer): Do not use
+	`field' property of `rfn-eshadow-overlay'.
+
 2011-02-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Makefile.in: Remove tramp-imap.el.
